--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -28,6 +28,12 @@
           line-height: 2.83rem;
           display: flex;
           align-items: center;
+
+          p {
+            opacity: 0.75;
+            font-style: italic;
+            font-size: 2.4rem;
+          }
         }
 
         .chainsActiveItem {
@@ -179,6 +185,25 @@
   }
 }
 
+@media screen and (max-width: 1440px) {
+  .containerBox {
+    .profileHeaderBox {
+      height: 21.67rem;
+      .profileHeader {
+        .headerInfo {
+          .addressItem {
+            font-size: 2.5rem;
+            font-family: Inter-Medium, Inter;
+            font-weight: 500;
+            color: #222222;
+            line-height: 2.5rem;
+          }
+        }
+      }
+    }
+  }
+}
+
 @media screen and (max-width: 1300px) {
   .containerBox {
     .profileHeaderBox {
@@ -192,10 +217,64 @@
   }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1024px) {
   .containerBox {
     .profileHeaderBox {
+      height: 20rem;
+      .profileHeader {
+        .headerInfo {
+          .chainsActiveItem {
+            margin-top: 2rem;
+          }
+
+          .integralItem {
+            margin-top: 1.67rem;
+          }
+        }
+        .passNFTBox {
+          width: 11.67rem;
+          height: 11.67rem;
+        }
+      }
     }
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .containerBox {
+    .profileContent {
+      .itemBox {
+        & > div {
+          width: calc((100% - 4rem) / 3);
+          margin: auto 0.6rem;
+          margin-bottom: 1.42rem;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .containerBox {
+    .profileHeaderBox {
+      .profileHeader {
+        .headerInfo {
+          .chainsActiveItem {
+            align-items: flex-start;
+            flex-direction: column;
+
+            .chainsActiveDesc {
+              margin-bottom: 1.2rem;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .containerBox {
     .profileContent {
       width: 100%;
 
@@ -216,7 +295,67 @@
 
       .tabsHeader {
         padding-left: 1.33rem;
-        margin-top: 2.5rem;
+        margin-top: 2rem;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .containerBox {
+    .profileHeaderBox {
+      height: auto;
+      .profileHeader {
+        flex-direction: column;
+
+        .headerInfo {
+          order: 1;
+          width: 100%;
+
+          .addressItem {
+            font-size: 1.75rem;
+            font-family: Inter-Medium, Inter;
+            font-weight: 500;
+            color: #222222;
+            line-height: 1.75rem;
+            margin-top: 2.5rem;
+            padding-bottom: 1.58rem;
+            border-bottom: 0.16rem solid rgba($color: #222, $alpha: 0.1);
+          }
+
+          .chainsActiveItem {
+            margin-top: 1.68rem;
+            .chainsActiveDesc {
+              font-size: 1.33rem;
+              font-family: Inter-SemiBold, Inter;
+              font-weight: 600;
+              color: #222222;
+              line-height: 1.33rem;
+            }
+
+            .activeBtnList {
+              flex-wrap: wrap;
+
+            }
+          }
+          .integralItem {
+            margin-top: 0.58rem;
+            padding-top: 1.58rem;
+            margin-bottom: 1.58rem;
+            border-top: 0.16rem solid rgba($color: #222, $alpha: 0.1);
+            p {
+              font-size: 1.33rem;
+              font-family: Inter-SemiBold, Inter;
+              font-weight: 600;
+              color: #222222;
+              line-height: 1.5rem;
+            }
+          }
+        }
+        .passNFTBox {
+          order: 0;
+          margin-top: 2.5rem;
+        }
       }
     }
   }
