--- a/components/PageHome/components/StrategyArticle/style.module.scss
+++ b/components/PageHome/components/StrategyArticle/style.module.scss
@@ -106,6 +106,15 @@
   }
 }
 
+@media screen and (min-width: 1921px){
+  .articleCard {
+    .articleInfo {
+      h3 {
+        height: 6.66rem;
+      }
+    }
+  }
+}
 @media screen and (max-width: 1440px) {
   .articleCard {
     height: auto;
