chore: update pass NFT

--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -75,7 +75,7 @@
         flex-shrink: 0;
         width: 13.33rem;
         height: 13.33rem;
-        background: linear-gradient(#70fac5, #9552eb);
+        background: linear-gradient(#7041b1, #0f1827);
         border-radius: 1rem;
         position: relative;
         overflow: hidden;
