--- a/components/PageModals/styles.module.scss
+++ b/components/PageModals/styles.module.scss
@@ -163,6 +163,60 @@
   }
 }
 
+@media screen and (max-width: 480px) {
+  .trialSuccessBox {
+    // width: calc(100% - 3.34rem);
+    width: 100%;
+    margin: auto;
+    padding: 1.67rem;
+
+    .modalHeader {
+      p {
+        font-size: 1.5rem;
+        font-family: Inter-Bold, Inter;
+        font-weight: bold;
+        color: rgba(#222, 0.5);
+        line-height: 1.5rem;
+      }
+    }
+    .container {
+      .successIllustration {
+        margin-top: 3.17rem;
+        width: 10.94rem;
+        height: 8.59rem;
+        margin-bottom: 2.42rem;
+      }
+      h3 {
+        font-size: 1.5rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #222222;
+        line-height: 2.17rem;
+        max-width: 90%;
+        margin: auto;
+      }
+      .playLink {
+        padding: 1rem 4.92rem;
+        font-size: 1.33rem;
+        font-family: Inter-SemiBold, Inter;
+        font-weight: 600;
+        color: #ffffff;
+        line-height: 1.33rem;
+        margin-top: 2.5rem;
+      }
+      .strategyLink {
+        margin-top: 1rem;
+        font-size: 1.17rem;
+        font-family: Inter-Medium, Inter;
+        font-weight: 500;
+        color: #222222;
+        line-height: 1.17rem;
+        margin-bottom: 1rem;
+      }
+    }
+  }
+}
+
 .quickTrialBox {
   width: 31.67rem;
   // height: 43.17rem;
@@ -228,6 +282,45 @@
     margin-top: 1.67rem;
   }
 }
+
+@media screen and (max-width: 460px) {
+  .quickTrialBox {
+    width: 80vw;
+    min-width: 288px;
+    padding: 1.67rem 1rem;
+
+    .modalHeader {
+      font-size: 1.5rem;
+      font-family: Inter-Bold, Inter;
+      font-weight: bold;
+      color: #222222;
+      line-height: 1.5rem;
+    }
+    .modalContent {
+      .cardBox {
+        margin: 2rem auto 2rem;
+        width: 15rem;
+      }
+    }
+    .btnBox {
+      padding: 1rem 3.58rem;
+      font-size: 1.33rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #ffffff;
+      line-height: 1.33rem;
+      margin-top: 1rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .quickTrialBox {
+    width: 95%;
+  }
+}
+
 
 .activeChainConfirm {
   width: 32.5rem;
@@ -301,7 +394,14 @@
     justify-content: center;
     align-items: center;
     margin: 0.6rem auto 0;
-    color: #8E50E4;
+    color: #8e50e4;
     font-size: 1.17rem;
+  }
+}
+
+@media screen and (max-width: 460px) {
+  .txDialogBox {
+    width: 100%;
+    margin: auto;
   }
 }
