feat: done profile UI interaction

--- a/components/ChainActiveButton/styles.module.scss
+++ b/components/ChainActiveButton/styles.module.scss
@@ -30,8 +30,8 @@
   font-weight: 500;
   color: #222222;
   line-height: 1.33rem;
-  margin-left: 0.67rem;
   user-select: none;
+  margin: 0 auto 0 0.67rem;
 }
 
 .activeIcon {
