--- a/styles/profile.module.scss
+++ b/styles/profile.module.scss
@@ -115,6 +115,9 @@
     margin: auto;
     overflow: hidden;
 
+    .hiddenTab {
+      display: none !important;
+    }
     .tabsHeader {
       margin-top: 4rem;
 
@@ -159,11 +162,15 @@
         margin-bottom: 2.08rem;
       }
 
-      .passNFTTips {
+      .passNFTTips,
+      .trialGameBtnBox {
         width: 100%;
         display: flex;
         flex-direction: column;
-        justify-content: space-around;
+        // justify-content: space-around;
+        justify-content: center;
+        align-items: center;
+        padding-top: 10rem;
         .trialGameBtn {
           text-align: center;
           background: rgba(#8e50e4, 0.1);
@@ -177,7 +184,8 @@
           padding: 1.67rem;
           user-select: none;
           cursor: pointer;
-          margin: 10rem auto 2.5rem;
+          // margin: 10rem auto 2.5rem;
+          display: inline-block;
         }
         p {
           text-align: center;
@@ -186,6 +194,10 @@
           font-weight: 500;
           color: rgba(#222, 0.3);
           line-height: 2.5rem;
+          margin-top: 2.5rem;
+        }
+        p + p {
+          margin-top: 0;
         }
       }
     }
@@ -322,6 +334,7 @@
       height: auto;
       .profileHeader {
         flex-direction: column;
+        padding-bottom: 1rem;
 
         .headerInfo {
           order: 1;
@@ -375,7 +388,9 @@
     .profileContent {
       min-height: 30rem;
       .itemBox {
-        .passNFTTips {
+        .passNFTTips,
+        .trialGameBtnBox {
+          padding-top: 4rem;
           .trialGameBtn {
             font-size: 1.5rem;
             font-family: Inter-SemiBold, Inter;
@@ -384,12 +399,16 @@
             line-height: 1.5rem;
             padding: 1.25rem 4rem;
             width: auto;
-            margin: 4rem auto 2rem;
+            // margin: 4rem auto 2rem;
           }
           p {
             font-size: 1.33rem;
             font-weight: 500;
             line-height: 2rem;
+            margin-top: 1.2rem;
+          }
+          p + p {
+            margin-top: 0;
           }
         }
       }
