--- a/components/GameInfo/styles.module.scss
+++ b/components/GameInfo/styles.module.scss
@@ -9,7 +9,7 @@
     flex-shrink: 0;
     flex-grow: 0;
 
-    background: #d2d2d2;
+    background: #efe5e5;
     border-radius: 1rem;
     overflow: hidden;
   }
@@ -87,7 +87,7 @@
       min-width: 8rem;
       min-height: 8rem;
       position: relative;
-      background: #e8e8e8;
+      background: #efe5e5;
       border-radius: 1rem;
       border: 0.25rem solid #ffffff;
       overflow: hidden;
