--- a/styles/game.module.scss
+++ b/styles/game.module.scss
@@ -144,6 +144,20 @@
       }
     }
 
+    .noTrialBtn {
+      display: inline-block;
+      margin: auto;
+      padding: 1.5rem 4.67rem 1.45rem;
+      font-size: 1.75rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #ffffff;
+      line-height: 1.75rem;
+      background: rgba(#222, 0.3);
+      border-radius: 2.67rem;
+      user-select: none; 
+    }
+
     .downIcon {
       margin: 3.4rem auto;
       @-webkit-keyframes slide-bottom {
@@ -221,6 +235,21 @@
 
       padding: 1.17rem 2rem;
       cursor: pointer;
+    }
+    .noTrialBtn {
+      margin-top: 1rem;
+      background: rgba(#222, 0.3);
+      box-shadow: 0rem 0.67rem 2.5rem 0rem rgba(142, 80, 228, 0.3);
+      border-radius: 2.67rem;
+      filter: blur(0px);
+
+      font-size: 1.33rem;
+      font-family: Inter-SemiBold, Inter;
+      font-weight: 600;
+      color: #ffffff;
+      line-height: 1.33rem;
+
+      padding: 1.17rem 2rem;
     }
   }
 
