--- a/components/PageCarnival/GameCard/style.module.scss
+++ b/components/PageCarnival/GameCard/style.module.scss
@@ -51,6 +51,25 @@
         color: #222222;
         line-height: 1.75rem;
       }
+
+      .rewardList {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        .gameRewards {
+          position: relative;
+          width: 1.71rem;
+          height: 1.71rem;
+        }
+        .rewardNum {
+          font-size: 1.5rem;
+          font-family: Inter-Medium, Inter;
+          font-weight: 500;
+          color: #222222;
+          line-height: 1.5rem;
+          margin-left: 0.33rem;
+        }
+      }
     }
     .gameRewardDesc {
       font-size: 1.17rem;
@@ -58,8 +77,15 @@
       font-weight: 500;
       color: #222222;
       line-height: 1.67rem;
-      margin: 0.75rem auto 0.83rem;
       height: 3.33rem;
+      margin: 0.75rem auto 0.83rem;
+
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 2;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      word-break: break-all;
     }
   }
   .trialBtn {
@@ -87,5 +113,48 @@
   margin-top: 0px !important;
   .gameCover {
     padding-bottom: calc(50% - 1.67rem) !important;
+  }
+}
+
+@media screen and (max-width: 1024px){
+  .bigStyle {
+    width: calc(66.6% - 2.5rem) !important;
+    .gameCover {
+      padding-bottom: calc(50% - 1.25rem) !important;
+    }
+  }
+
+  .gameCard {
+    .gameContent {
+      margin-top: 2.83rem;
+    }
+  }
+}
+
+@media screen and (max-width: 600px){
+  .bigStyle {
+    width: calc(100% - 1.33rem) !important;
+    .gameCover {
+      padding-bottom: calc(50% - 1.25rem) !important;
+    }
+  }
+
+  .gameCard {
+    .gameContent {
+      margin-top: 2.25rem;
+    }
+    .gameCover {
+      .gameLogo {
+        width: 3.33rem;
+        height: 3.33rem;
+        bottom: -1.67rem;
+      }
+      .gameTags {
+        .gameTag {
+          border: 0.16rem solid rgba($color: white, $alpha: 0.5);
+          color: rgba($color: white, $alpha: 0.6);
+        }
+      }
+    }
   }
 }
